# mws-cli

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
crates/mws-auth/: Cargo.toml
crates/mws-auth/src/: account.rs  auth_code.rs  device_code.rs  error.rs  lib.rs  refresh.rs  store.rs  token.rs
crates/mws-cli/: Cargo.toml
crates/mws-cli/src/: cli.rs  context.rs  main.rs  safety.rs
crates/mws-cli/src/commands/: auth.rs  describe.rs  mod.rs  raw.rs  whoami.rs
crates/mws-cli/src/commands/drive/: cp.rs  mod.rs
crates/mws-cli/src/commands/mail/: mod.rs  send.rs
crates/mws-cli/src/commands/teams/: list.rs  mod.rs  post.rs  presence.rs
crates/mws-cli/tests/: auth_list.rs  auth_login.rs  auth_logout.rs  drive_cp.rs  raw.rs  raw_all.rs  safety.rs  whoami.rs
crates/mws-graph/: Cargo.toml
crates/mws-graph/src/: error.rs  lib.rs  paging.rs  upload.rs
crates/mws-keyring/: Cargo.toml
crates/mws-keyring/src/: lib.rs
crates/mws-output/: Cargo.toml
crates/mws-output/src/: lib.rs
src/: cli.rs  context.rs  errors.rs  main.rs  remediation.rs  safety.rs
src/auth/: account.rs  auth_code.rs  device_code.rs  error.rs  mod.rs  refresh.rs  store.rs  token.rs
src/commands/: auth.rs  describe.rs  mod.rs  raw.rs  util.rs  whoami.rs
src/commands/calendar/: cancel.rs  create.rs  datetime.rs  events.rs  find_times.rs  mod.rs  rsvp.rs
src/commands/drive/: cp.rs
src/commands/mail/: send.rs
src/commands/teams/: list.rs  mod.rs  post.rs  presence.rs
src/graph/: error.rs  mod.rs  paging.rs  upload.rs
src/keyring/: crypto.rs  mod.rs
tests/: auth_list.rs  auth_login.rs  auth_logout.rs  calendar.rs  drive_cp.rs  mail_send.rs  raw.rs  raw_all.rs  remediation_login.rs  remediation_runtime.rs  safety.rs  smoke.rs  teams.rs  whoami.rs
