[workspace]
resolver = "2"
members = ["crates/mws-cli", "crates/mws-auth", "crates/mws-graph", "crates/mws-keyring", "crates/mws-output"]

[workspace.package]
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pricelee/mws"

[workspace.dependencies]
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "fs", "net", "io-util", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls"] }
# keyring moved to mws-keyring per-target (platform-conditional features)
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
directories = "5"
tiny_http = "0.12"
url = "2"
async-trait = "0.1"
bytes = "1"
base64 = "0.22"
# dev
wiremock = "0.5"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
