[package]
name = "mws-auth"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mws-keyring = { path = "../mws-keyring" }
tokio.workspace = true
reqwest.workspace = true
oauth2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
tiny_http.workspace = true
rand.workspace = true
async-trait.workspace = true
directories.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
