[package]
name = "mws-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Microsoft identity-platform OAuth flows (device code, auth code + PKCE, refresh) and account storage for the mws CLI."
keywords = ["mws", "microsoft", "oauth", "entra", "graph"]
categories = ["authentication"]

[dependencies]
mws-keyring = { path = "../mws-keyring", version = "0.0.1" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
tiny_http.workspace = true
rand.workspace = true
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
reqwest = { workspace = true, features = ["blocking"] }
