[package]
name = "mws-cli"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mws"
path = "src/main.rs"

[dependencies]
mws-auth = { path = "../mws-auth" }
mws-graph = { path = "../mws-graph" }
mws-output = { path = "../mws-output" }
mws-keyring = { path = "../mws-keyring" }
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
wiremock.workspace = true
