[package]
name = "mws-cli"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mws"
path = "src/main.rs"

[dependencies]
mws-auth = { path = "../mws-auth" }
mws-graph = { path = "../mws-graph" }
mws-output = { path = "../mws-output" }
mws-keyring = { path = "../mws-keyring" }
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
reqwest = { workspace = true }
anyhow = "1"
base64.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
wiremock.workspace = true

[features]
default = []
test-helpers = []

[[test]]
name = "auth_login"
required-features = ["test-helpers"]

[[test]]
name = "whoami"
required-features = ["test-helpers"]

[[test]]
name = "auth_logout"
required-features = ["test-helpers"]

[[test]]
name = "auth_list"
required-features = ["test-helpers"]

[[test]]
name = "raw"
required-features = ["test-helpers"]

[[test]]
name = "mail_send"
required-features = ["test-helpers"]

[[test]]
name = "drive_cp"
required-features = ["test-helpers"]
