[package]
name = "mws-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "mws — one CLI for Microsoft 365 / Microsoft Graph (Outlook mail, OneDrive, Teams, Entra). cargo install mws-cli."
keywords = ["microsoft", "m365", "graph", "outlook", "teams"]
categories = ["command-line-utilities", "authentication"]
readme = "../../README.md"

[[bin]]
name = "mws"
path = "src/main.rs"

[dependencies]
mws-auth = { path = "../mws-auth", version = "0.0.1" }
mws-graph = { path = "../mws-graph", version = "0.0.1" }
mws-output = { path = "../mws-output", version = "0.0.1" }
mws-keyring = { path = "../mws-keyring", version = "0.0.1" }
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
reqwest = { workspace = true }
anyhow = "1"
base64.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
wiremock.workspace = true

[features]
default = []
test-helpers = []

[[test]]
name = "auth_login"
required-features = ["test-helpers"]

[[test]]
name = "whoami"
required-features = ["test-helpers"]

[[test]]
name = "auth_logout"
required-features = ["test-helpers"]

[[test]]
name = "auth_list"
required-features = ["test-helpers"]

[[test]]
name = "raw"
required-features = ["test-helpers"]

[[test]]
name = "mail_send"
required-features = ["test-helpers"]

[[test]]
name = "drive_cp"
required-features = ["test-helpers"]

[[test]]
name = "raw_all"
required-features = ["test-helpers"]

[[test]]
name = "safety"
required-features = ["test-helpers"]

[[test]]
name = "teams"
required-features = ["test-helpers"]
