[package]
name = "mws-graph"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mws-auth = { path = "../mws-auth" }
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
