[package]
name = "mws-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Microsoft Graph HTTP client (auth-aware, 429/503 retry, paging, upload sessions) for the mws CLI."
keywords = ["mws", "microsoft", "graph", "msgraph", "m365"]
categories = ["web-programming::http-client", "api-bindings"]

[dependencies]
mws-auth = { path = "../mws-auth", version = "0.0.1" }
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
bytes.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile.workspace = true
