[package]
name = "mws-keyring"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
keyring.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
