[package]
name = "mws-keyring"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(target_os = "windows")'.dependencies.keyring]
version = "3.6"
features = ["windows-native"]

[target.'cfg(target_os = "macos")'.dependencies.keyring]
version = "3.6"
features = ["apple-native"]

[target.'cfg(target_os = "linux")'.dependencies.keyring]
version = "3.6"
features = ["linux-native-sync-persistent"]
