[package]
name = "mws-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Output formatting (JSON/table/YAML/TSV) for the mws CLI."
keywords = ["mws", "cli", "output", "json", "table"]
categories = ["command-line-interface"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
comfy-table.workspace = true
thiserror.workspace = true

[dev-dependencies]
